# Arbos_Genesis

./: .arbos-launch.sh  .env.example  .gitmodules  BITTENSOR.md  BOT_MEMORY.md  CLAUDE.md  GOAL_TELEGRAM_BITTENSOR.md  PROMPT.md  README.md  WORKAROUNDS.md  arbos.py  pyproject.toml  run.sh
.claude/: FINDINGS.md
.claude/commands/: audit.md  fix.md  improve.md  push.md  status.md  trace.md
context/: goals.json
context/chat/: 20260320_173236.jsonl  20260320_174023.jsonl  20260320_174327.jsonl  20260320_180811.jsonl  20260320_180909.jsonl  20260320_181034.jsonl  20260320_181151.jsonl  20260320_182646.jsonl  20260320_183305.jsonl  20260320_184135.jsonl  20260321_095853.jsonl  20260321_095923.jsonl  20260321_095956.jsonl  20260321_100022.jsonl  20260322_121537.jsonl
context/goals/1/: GOAL.md  STATE.md  telegram_response.md
context/goals/2/: GOAL.md  STATE.md
context/workspace/-5097366430/: FINDINGS.md  GOAL_TELEGRAM_BITTENSOR.md  goals.json  miner_reward_pct.tsv  subnet_miner_ck_vtrust_20260321.csv  subnet_miner_ck_vtrust_20260321.json  subnet_miner_ck_vtrust_20260321_asc.csv  subnets_recycle_or_burn.txt  taostats_incentive_burn_20260321.txt  workspace.json
data_providers/: README.md  __init__.py  discord.py  taomarketcap.py  taostats.py
data_providers/knowledge/: INDEX.yaml  discord.yaml  taomarketcap.yaml  taostats.yaml
tools/: check_agcli.sh  check_btcli.sh  check_data_providers.sh  diagnose_data_providers.sh  discord  polymarket_scan.py  taomarketcap  taostats  telegram_chat_ids.py
tools/shims/: agcli  btcli
(+194 files in other folders)
