[project]
name = "arbos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "python-dotenv",
    "pyTelegramBotAPI",
    "httpx",
    "fastapi",
    "uvicorn",
    "cryptography",
]

[project.optional-dependencies]
bittensor = [
    "bittensor-cli",
]

[tool.setuptools]
py-modules = ["arbos"]
